# ship-note

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: CLI.md
docs/devlogs/: 2026-02-25-v0.1.0.md  2026-02-25-v0.1.1.md  2026-02-25-v0.1.2.md  2026-02-25-v0.1.3.md  2026-02-25-v0.1.4.md  2026-02-25-v0.1.5.md  2026-02-25-v0.1.6.md  2026-02-25-v0.1.7.md  2026-02-25-v0.1.8.md  2026-02-25-v0.1.9.md
src/ship_note/: cli.py
tests/: test_cli.py  test_version_sync.py
