[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ship-note"
version = "0.1.9"
description = "Generate concise release/devlog drafts from git history and changelog"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alex Builds Source" }]
license = { text = "MIT" }

[project.scripts]
ship-note = "ship_note.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
